@@ -1,3 +1,8 @@
+2014-02-15  Mikael Morin  <mikael@gcc.gnu.org>
+
+	PR fortran/59599
+	* gfortran.dg/ichar_3.f90: New test.
+
 2014-02-15  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/60183
