@@ -1,3 +1,9 @@
+2014-02-15  Mikael Morin  <mikael@gcc.gnu.org>
+
+	PR fortran/59599
+	* trans-intrinsic.c (gfc_conv_intrinsic_ichar): Calculate the
+	number of arguments.
+
 2014-02-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR fortran/52370
